@@ -1,3 +1,11 @@
+2013-02-01  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* libttf/os2.c: Index checking for string array elements.
+	* tests/ttfdump.test: Add a test case for invalid array indices.
+	* tests/bad.otf (new): Additional test input.
+	* tests/ttfdump.bad (new): Expected output..
+	* Makefile.am: Adapted.
+
 2013-01-31  Akihiro Sagawa  <sagawa.aki@gmail.com>
 
 	* include/os2_P.h: Added missing commas to fix an ancient bug.
